--- a/src/main/resources/templates/infrastructure/security/authController.mustache
+++ b/src/main/resources/templates/infrastructure/security/authController.mustache
@@ -1,23 +1,23 @@
 package {{package}};
-
 {{#imports}}
 import {{.}};
 {{/imports}}
-import lombok.RequiredArgsConstructor;
-import org.springframework.http.ResponseEntity;
-import org.springframework.http.HttpStatus;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.web.bind.annotation.*;
-import io.swagger.v3.oas.annotations.tags.Tag;
 import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.parameters.RequestBody;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.Authentication;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
 @Tag(name = "Auth", description = "Endpoints for authentication")
 @RestController
@@ -26,7 +26,6 @@ import io.swagger.v3.oas.annotations.parameters.RequestBody;
 public class AuthController {
 
 private final AuthenticationManager authenticationManager;
-private final UserDetailsService userDetailsService;
 private final JwtService jwtService;
 
 @PostMapping("/login")
@@ -40,28 +39,21 @@ content = @Content(schema = @Schema(implementation = AuthRequestDto.class))
 )
 )
 @ApiResponses(value = {
-@ApiResponse(
-responseCode = "200",
-description = "Login successful",
-content = @Content(schema = @Schema(implementation = AuthResponseDto.class))
-),
-@ApiResponse(
-responseCode = "401",
-description = "Unauthorized - invalid credentials",
-content = @Content(schema = @Schema(implementation = AuthResponseDto.class))
-)
+@ApiResponse(responseCode = "200", description = "Login successful", content = @Content(schema = @Schema(implementation = AuthResponseDto.class))),
+@ApiResponse(responseCode = "401", description = "Unauthorized - invalid credentials", content = @Content(schema = @Schema(implementation = AuthResponseDto.class)))
 })
 public ResponseEntity<AuthResponseDto> authenticate(@org.springframework.web.bind.annotation.RequestBody AuthRequestDto request) {
 	try {
-	authenticationManager.authenticate(
+	Authentication authentication = authenticationManager.authenticate(
 	new UsernamePasswordAuthenticationToken(request.getUsername(), request.getPassword())
 	);
-	UserDetails user = userDetailsService.loadUserByUsername(request.getUsername());
-	String token = jwtService.generateToken(user);
+
+	String token = jwtService.generateToken(authentication);
+
 	return ResponseEntity.ok(
 	AuthResponseDto.builder()
 	.token(token)
-	.username(user.getUsername())
+	.username(authentication.getName())
 	.code(1)
 	.message("Login successful")
 	.build()
