--- a/src/main/resources/templates/infrastructure/security/userPrincipal.mustache
+++ b/src/main/resources/templates/infrastructure/security/userPrincipal.mustache
@@ -9,12 +9,13 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+
 import java.util.Collection;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 @AllArgsConstructor
-public class UserPrincipal implements UserDetails {
+public class UserPrincipal implements UserDetails, IdentifiableUser {
 
 private final User user;
 
