--- a/src/main/resources/templates/presentation/projection.mustache
+++ b/src/main/resources/templates/presentation/projection.mustache
@@ -1,10 +1,11 @@
 package {{package}};
 
 {{#imports}}
-import {{.}};
+	import {{.}};
 {{/imports}}
 
 import org.axonframework.eventhandling.AllowReplay;
+import org.axonframework.eventhandling.EventHandler;
 import org.axonframework.config.ProcessingGroup;
 import org.springframework.stereotype.Component;
 import lombok.extern.slf4j.Slf4j;
@@ -24,26 +25,21 @@ this.repository = repository;
 @EventHandler
 public void on({{name}}CreatedEvent event) {
 try {
-{{name}} entity = new {{name}}(
+{{name}} entity = {{name}}.builder()
 {{#fields}}
+	{{^isOneToMany}} {{^isManyToOne}}
+		.{{nameLowerCase}}(event.get{{nameCapitalized}}().value())
+	{{/isManyToOne}} {{/isOneToMany}}
 	{{#isManyToOne}}
-		new {{realType}}(event.get{{nameCapitalized}}().value()){{^last}},{{/last}}
-	{{/isManyToOne}}
-	{{^isManyToOne}}
-		{{#isOneToMany}}
-		null{{^last}},{{/last}}
-		{{/isOneToMany}}
-		{{^isOneToMany}}
-		event.get{{nameCapitalized}}().value(){{^last}},{{/last}}
-		{{/isOneToMany}}
+		.{{nameLowerCase}}(new {{realType}}(event.get{{nameCapitalized}}().value()))
 	{{/isManyToOne}}
 {{/fields}}
-);
+.build();
+
 repository.save(entity);
 log.info("{{name}} inserted: {}", entity);
 } catch (Exception e) {
 log.error("Error saving {{name}}: {}", e.getMessage(), e);
-
 throw e;
 }
 }
@@ -51,22 +47,24 @@ throw e;
 @EventHandler
 public void on({{name}}UpdatedEvent event) {
 try {
-	{{name}} entity = repository.findById(event.getId().value())
-	.orElseThrow(() -> new RuntimeException("{{name}} not found"));
+{{name}} entity = repository.findById(event.getId().value())
+.orElseThrow(() -> new RuntimeException("{{name}} not found"));
+
 {{#fieldWithoutRelations}}
-{{#isManyToOne}}
-	entity.set{{nameCapitalized}}(new {{realType}}(event.get{{nameCapitalized}}().value()));
-{{/isManyToOne}}
-{{^isManyToOne}}
-	entity.set{{nameCapitalized}}(event.get{{nameCapitalized}}().value());
-{{/isManyToOne}}
+	{{#isManyToOne}}
+		entity.set{{nameCapitalized}}(new {{realType}}(event.get{{nameCapitalized}}().value()));
+	{{/isManyToOne}}
+	{{^isManyToOne}}
+		entity.set{{nameCapitalized}}(event.get{{nameCapitalized}}().value());
+	{{/isManyToOne}}
 {{/fieldWithoutRelations}}
-	repository.save(entity);
-	log.info("{{name}} updated successfully: {}", event.getId().value());
-	} catch (Exception e) {
-	log.error("Error updating {{name}}: {}", e.getMessage(), e);
-	throw e;
-	}
+
+repository.save(entity);
+log.info("{{name}} updated successfully: {}", event.getId().value());
+} catch (Exception e) {
+log.error("Error updating {{name}}: {}", e.getMessage(), e);
+throw e;
+}
 }
 
 @EventHandler
@@ -75,8 +73,8 @@ try {
 repository.deleteById(event.getId().value());
 log.info("{{name}} deleted successfully: {}", event.getId().value());
 } catch (Exception e) {
-	log.error("Error deleting {{name}}: {}", e.getMessage(), e);
-	throw e;
+log.error("Error deleting {{name}}: {}", e.getMessage(), e);
+throw e;
 }
 }
 }
