--- a/src/main/resources/templates/infrastructure/security/securityConfig.mustache
+++ b/src/main/resources/templates/infrastructure/security/securityConfig.mustache
@@ -4,7 +4,6 @@ package {{package}};
 import {{.}};
 {{/imports}}
 
-
 import com.nimbusds.jose.jwk.source.ImmutableSecret;
 import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.info.Info;
@@ -16,7 +15,8 @@ import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.authentication.ProviderManager;
+import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
@@ -31,20 +31,26 @@ import org.springframework.security.web.SecurityFilterChain;
 
 import javax.crypto.SecretKey;
 import javax.crypto.spec.SecretKeySpec;
+import java.util.Base64;
 
 import static org.springframework.security.config.Customizer.withDefaults;
 
-@EnableMethodSecurity(prePostEnabled = true)
 @Configuration
+@EnableMethodSecurity(prePostEnabled = true)
 @RequiredArgsConstructor
 public class SecurityConfig {
 
-@Value("${security.jwt.secret:''}")
+private final CustomUserDetailsService userDetailsService;
+
+@Value("${security.jwt.secret}")
 private String jwtKey;
 
 @Bean
-public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
-return config.getAuthenticationManager();
+public AuthenticationManager authenticationManager() {
+DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
+authProvider.setUserDetailsService(userDetailsService);
+authProvider.setPasswordEncoder(passwordEncoder());
+return new ProviderManager(authProvider);
 }
 
 @Bean
@@ -89,7 +95,7 @@ return new NimbusJwtEncoder(new ImmutableSecret<>(getSecretKey()));
 }
 
 private SecretKey getSecretKey() {
-byte[] keyBytes = java.util.Base64.getDecoder().decode(jwtKey);
+byte[] keyBytes = Base64.getDecoder().decode(jwtKey);
 return new SecretKeySpec(keyBytes, "HmacSHA512");
 }
 
@@ -121,5 +127,4 @@ public FilterRegistrationBean<ApiKeyFilter> apiKeyFilter(ApiKeyFilter filter) {
 		registration.setOrder(1);
 		return registration;
 		}
-		}
-
+}
