--- a/src/main/resources/templates/shared/audit/identifiableUser.mustache
+++ b/src/main/resources/templates/shared/audit/identifiableUser.mustache
@@ -3,5 +3,9 @@ package {{package}};
 public interface IdentifiableUser {
 
 	String getUsername();
+	public String getId() ;
+{{#isMultitenant}}
+	public String getTenantId() ;
+{{/isMultitenant}}
 
 }
