--- a/src/main/resources/templates/infrastructure/security/jwtService.mustache
+++ b/src/main/resources/templates/infrastructure/security/jwtService.mustache
@@ -15,6 +15,8 @@ import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.stream.Collectors;
 
+
+
 @Service
 @RequiredArgsConstructor
 public class JwtService {
@@ -33,10 +35,26 @@ var authorities = authentication.getAuthorities().stream()
 .map(Object::toString)
 .collect(Collectors.joining(" "));
 
+UserPrincipal userPrincipal = (UserPrincipal) authentication.getPrincipal();
+
+String userId = userPrincipal.getId();
+
+{{#isMultiTenant}}
+String tenantId = userPrincipal.getTenantId();
+{{/isMultiTenant}}
+
+if(userId == null) {
+	throw new IllegalArgumentException("User ID ");
+}
+
 var claims = JwtClaimsSet.builder()
 .issuedAt(now)
 .expiresAt(now.plus(tokenValidityInSeconds, ChronoUnit.SECONDS))
 .subject(authentication.getName())
+.claim("userId", userId)
+{{#isMultiTenant}}
+.claim("tenantId", tenantId)
+{{/isMultiTenant}}
 .claim("scope", authorities)
 .build();
 
